{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 76,
  "lineage": "699570c3-d678-a32a-7203-4d90b98e98cd",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "project_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/loadBalancers/udacity-devops-lb/frontendIPConfigurations/PublicIpAddress",
                "name": "PublicIpAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/publicIPAddresses/vmss-public-ip"
              }
            ],
            "id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/loadBalancers/udacity-devops-lb",
            "location": "eastus",
            "name": "udacity-devops-lb",
            "resource_group_name": "udacity-devops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "userTaggedValue": "udacity"
            }
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bpaddresspool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/loadBalancers/udacity-devops-lb/backendAddressPools/udacity-devops-bpapool",
            "loadbalancer_id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/loadBalancers/udacity-devops-lb",
            "name": "udacity-devops-bpapool"
          },
          "dependencies": [
            "azurerm_lb.project_lb",
            "azurerm_public_ip.public_ip",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "vmss_probee",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/loadBalancers/udacity-devops-lb/probes/udacity-devops-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/loadBalancers/udacity-devops-lb",
            "name": "udacity-devops-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.project_lb",
            "azurerm_public_ip.public_ip",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "vmss_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 5000,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/loadBalancers/udacity-devops-lb/frontendIPConfigurations/PublicIpAddress",
            "frontend_ip_configuration_name": "PublicIpAddress",
            "frontend_port": 80,
            "id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/loadBalancers/udacity-devops-lb/loadBalancingRules/udacity-devops-lbrule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/loadBalancers/udacity-devops-lb",
            "name": "udacity-devops-lbrule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.project_lb",
            "azurerm_public_ip.public_ip",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vmas_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/networkInterfaces/udacity-devops-nic-0",
            "internal_domain_name_suffix": "fmwjl4fmp4pu5asqrrtwr1fbmg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vmas-nic",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/virtualNetworks/udacity-devops-network/subnets/internal"
              }
            ],
            "location": "eastus",
            "name": "udacity-devops-nic-0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "udacity-devops",
            "tags": {
              "userTaggedValue": "udacity"
            }
          },
          "dependencies": [
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/networkInterfaces/udacity-devops-nic-1",
            "internal_domain_name_suffix": "fmwjl4fmp4pu5asqrrtwr1fbmg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vmas-nic",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/virtualNetworks/udacity-devops-network/subnets/internal"
              }
            ],
            "location": "eastus",
            "name": "udacity-devops-nic-1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "udacity-devops",
            "tags": {
              "userTaggedValue": "udacity"
            }
          },
          "dependencies": [
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vmss-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/networkSecurityGroups/udacity-devops-nsg",
            "location": "eastus",
            "name": "udacity-devops-nsg",
            "resource_group_name": "udacity-devops",
            "security_rule": [],
            "tags": {
              "userTaggedValue": "udacity"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vmss_allow_access_to_other_vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/networkSecurityGroups/udacity-devops-nsg/securityRules/AllowAccessToOtherVMs",
            "name": "AllowAccessToOtherVMs",
            "network_security_group_name": "udacity-devops-nsg",
            "priority": 150,
            "protocol": "*",
            "resource_group_name": "udacity-devops",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.vmss-nsg",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vmss_deny_from_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "Internet",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/networkSecurityGroups/udacity-devops-nsg/securityRules/DenyDirectAccessFromInternet",
            "name": "DenyDirectAccessFromInternet",
            "network_security_group_name": "udacity-devops-nsg",
            "priority": 200,
            "protocol": "*",
            "resource_group_name": "udacity-devops",
            "source_address_prefix": "Internet",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.vmss-nsg",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/publicIPAddresses/vmss-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.71.19.86",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vmss-public-ip",
            "resource_group_name": "udacity-devops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "userTaggedValue": "udacity"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/virtualNetworks/udacity-devops-network/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "udacity-devops",
            "virtual_network_name": "udacity-devops-network"
          },
          "dependencies": [
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f8952c2b-7fac-4f9f-8250-8c6768eca166",
            "id": "/subscriptions/bb07494f-11d6-4bb1-9f3c-10e0408e757b/resourceGroups/udacity-devops/providers/Microsoft.Network/virtualNetworks/udacity-devops-network",
            "location": "eastus",
            "name": "udacity-devops-network",
            "resource_group_name": "udacity-devops",
            "tags": {
              "userTaggedValue": "udacity"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}